<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Confirmacion"
    android:paddingTop="32dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_confirm"
        android:textSize="24dp"
        android:gravity="center"
        android:textStyle="bold"
        android:id="@+id/lblConfirm"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblConfirm"
        android:text="@string/user_name"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="48dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/lblNombre"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblNombre"
        android:text="Virgilio Romero"
        android:textSize="18dp"
        android:id="@+id/txtNombre"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNombre"
        android:text="@string/user_dob"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/lblDob"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblDob"
        android:text="15/08/1995"
        android:textSize="18dp"
        android:id="@+id/txtDob"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtDob"
        android:text="@string/user_telephone"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/lblTelefono"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblTelefono"
        android:text="091090921"
        android:textSize="18dp"
        android:id="@+id/txtTelefono"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTelefono"
        android:text="@string/user_email"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/lblEmail"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblEmail"
        android:text="virgilio@gmail.com"
        android:textSize="18dp"
        android:id="@+id/txtEmail"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEmail"
        android:text="@string/user_description"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/lblDescripcion"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblDescripcion"
        android:text="Un grande el loco"
        android:textSize="18dp"
        android:id="@+id/txtDescripcion"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ButtonRaised"
        android:text="@string/btn_edit"
        android:layout_below="@id/txtDescripcion"
        android:layout_marginTop="64dp"
        android:textSize="18dp"
        android:id="@+id/btnEditar"/>
</RelativeLayout>